# llm386

./: .gitignore  CLAUDE.md  Cargo.toml  FAQ.md  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
crates/llm386-cli/: Cargo.toml
crates/llm386-cli/src/: cli.rs  commands.rs  main.rs
crates/llm386-compress/: Cargo.toml
crates/llm386-compress-anthropic/: Cargo.toml
crates/llm386-compress-anthropic/src/: lib.rs
crates/llm386-compress/src/: lib.rs  noop.rs  truncating.rs
crates/llm386-core/: Cargo.toml
crates/llm386-core/src/: block.rs  edge.rs  embedder.rs  error.rs  ids.rs  lib.rs  model.rs  packed.rs  packer.rs  page.rs  pager.rs  reducer.rs  retriever.rs  store.rs  summarizer.rs  tokenizer.rs  trace.rs
crates/llm386-diff/: Cargo.toml
crates/llm386-diff/src/: lib.rs
crates/llm386-packer/: Cargo.toml
crates/llm386-packer/src/: lib.rs  simple.rs
crates/llm386-pager/: Cargo.toml
crates/llm386-pager/benches/: page.rs
crates/llm386-pager/src/: budget.rs  greedy.rs  lib.rs  retrievers.rs
crates/llm386-reduce/: Cargo.toml
crates/llm386-reduce/src/: identity.rs  json_events.rs  lib.rs  tools.rs
crates/llm386-retrieve-ann/: Cargo.toml
crates/llm386-retrieve-ann/src/: cache.rs  hnsw.rs  lib.rs  linear.rs  openai.rs
crates/llm386-store-lmdb/: Cargo.toml
crates/llm386-store-lmdb/src/: lib.rs  store.rs
crates/llm386-tokenizer/: Cargo.toml
crates/llm386-tokenizer/benches/: tokenize.rs
crates/llm386-tokenizer/src/: cache.rs  huggingface.rs  lib.rs  registry.rs  tiktoken.rs
crates/llm386-trace/: Cargo.toml
crates/llm386-trace/src/: lib.rs  lmdb.rs
docs/: CLI.md
examples/cascade-routing/: Dockerfile  Dockerfile.dockerignore  README.md  agent.py  docker-compose.yml  llm386.toml
examples/configs/: README.md  llm386-chat-loop.toml  llm386-focused-qa.toml  llm386-rag-heavy.toml
examples/langgraph-agent/: Dockerfile  README.md  agent.py  docker-compose.yml  llm386.toml  requirements.txt
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: config.rs  lib.rs  python_traits.rs  store.rs  types.rs
python/src/llm386/: __init__.py  api.py  types.py
python/tests/: conftest.py  test_smoke.py
