[workspace]
resolver = "3"
members = [
    "crates/llm386-core",
    "crates/llm386-store-lmdb",
    "crates/llm386-tokenizer",
    "crates/llm386-pager",
    "crates/llm386-packer",
    "crates/llm386-trace",
    "crates/llm386-compress",
    "crates/llm386-compress-anthropic",
    "crates/llm386-diff",
    "crates/llm386-reduce",
    "crates/llm386-retrieve-ann",
    "crates/llm386-cli",
]

[workspace.package]
version = "1.0.0-alpha"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Matt Fitzgerald <matt.fitzgerald@gmail.com>"]
repository = "https://github.com/fitzee/llm386"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Product names ("OpenAI", "GPT-4", "LMDB", "URI", ...) appear in
# doc comments as natural prose, not as code identifiers.
doc_markdown = "allow"

[workspace.dependencies]
# Internal crates
llm386-core = { path = "crates/llm386-core", version = "1.0.0-alpha" }
llm386-store-lmdb = { path = "crates/llm386-store-lmdb", version = "1.0.0-alpha" }
llm386-tokenizer = { path = "crates/llm386-tokenizer", version = "1.0.0-alpha" }
llm386-pager = { path = "crates/llm386-pager", version = "1.0.0-alpha" }
llm386-packer = { path = "crates/llm386-packer", version = "1.0.0-alpha" }
llm386-trace = { path = "crates/llm386-trace", version = "1.0.0-alpha" }
llm386-compress = { path = "crates/llm386-compress", version = "1.0.0-alpha" }
llm386-compress-anthropic = { path = "crates/llm386-compress-anthropic", version = "1.0.0-alpha" }
llm386-diff = { path = "crates/llm386-diff", version = "1.0.0-alpha" }
llm386-reduce = { path = "crates/llm386-reduce", version = "1.0.0-alpha" }
llm386-retrieve-ann = { path = "crates/llm386-retrieve-ann", version = "1.0.0-alpha" }

# Common runtime deps (added per-crate as needed)
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
blake3 = "1"
bytes = "1"
parking_lot = "0.12"

# Dev deps
criterion = "0.5"
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
