[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm386"
version = "0.1.0"
description = "Python wrapper for the LLM386 context virtualization runtime."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Matt Fitzgerald", email = "matt.fitzgerald@gmail.com" }]
keywords = ["llm", "context", "memory", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/mattfitzgerald/llm386"

[tool.hatch.build.targets.wheel]
packages = ["src/llm386"]

[tool.hatch.build.targets.sdist]
include = ["src/llm386", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
