[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "llm386"
version = "1.0.0a0"
description = "Python bindings for the LLM386 context virtualization runtime."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Matt Fitzgerald", email = "matt.fitzgerald@gmail.com" }]
keywords = ["llm", "context", "memory", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/fitzee/llm386"

[tool.maturin]
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
