[package]
name = "llm386-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the LLM386 runtime."

[[bin]]
name = "llm386"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
