[package]
name = "llm386-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the LLM386 runtime."

[[bin]]
name = "llm386"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
llm386-core = { workspace = true }
llm386-store-lmdb = { workspace = true }
llm386-tokenizer = { workspace = true }
llm386-pager = { workspace = true }
llm386-packer = { workspace = true }
llm386-trace = { workspace = true }
llm386-compress = { workspace = true }
llm386-compress-anthropic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
getrandom = "0.4"
serde_json = "1"
toml = "1"
serde = { workspace = true }
