[package]
name = "llm386-compress-anthropic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Anthropic Claude-backed Summarizer for LLM386."

[lints]
workspace = true

[dependencies]
llm386-core = { workspace = true }
serde = { workspace = true }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
