[package]
name = "llm386-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core domain types and traits for LLM386."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
