[package]
name = "llm386-pager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Working-set selection (paging) for LLM386."

[lints]
workspace = true

[dependencies]
llm386-core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
llm386-store-lmdb = { workspace = true }
llm386-tokenizer = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
