[package]
name = "llm386-store-lmdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LMDB-backed block and metadata storage for LLM386."

[lints]
workspace = true

[dependencies]
llm386-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
heed = "0.22"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
