[package]
name = "llm386-tokenizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tokenizer adapters and registry for LLM386."

[lints]
workspace = true

[dependencies]
llm386-core = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tiktoken-rs = "0.11"
lru = "0.18"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "tokenize"
harness = false
